--- a/www/css/main.css
+++ b/www/css/main.css
@@ -1,53 +1,122 @@
-html, body {
+html,
+body {
     height: 100%;
     overflow: auto;
     position: relative;
-
 }
 
 body {
-     background-image: linear-gradient(to top, #e6e9f0 0%, #eef1f5 100%);
-     min-height: 100vh;
-     font: normal 16px sans-serif;
-     padding-top: 3%; /* space for the top nav bar */
-     font-size: 14px !important;
+    background-image: linear-gradient(to top, #e6e9f0 0%, #eef1f5 100%);
+    min-height: 100vh;
+    font: normal 16px sans-serif;
+    padding-top: 3%;
+    /* space for the top nav bar */
+    font-size: 14px !important;
 }
 
-.category{cursor:pointer;}
-.categoryitem{margin: 20px;/* border-bottom: 1px solid grey; */background-color: white;cursor: pointer;box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06);/* padding-bottom: 5px; */}
+.category {
+    cursor: pointer;
+}
 
-.loader{
-	display: none;
-	position: fixed;
-	left: 0px;
-	top: 64px;
-	width: 100%;
-	height: 100%;
-	z-index: 9999;
-	background: url('../img/loading.gif') 50% 40% no-repeat rgb(249,249,249);
+.categoryitem {
+    margin: 20px;
+    /* border-bottom: 1px solid grey; */
+    background-color: white;
+    cursor: pointer;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06);
+    /* padding-bottom: 5px; */
 }
-.categories_gallery,.collection_link{text-decoration: underline;cursor: pointer;}
-.breadcrumb{display: none;margin: 2% 10%;background-color: white;box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06);}
-.viewer_container{display: none;}
-.item_label{display: none;}
-.item_title{color: #e67a00;}
-.filter_text{color: #4f4f79;}
-.items_search{box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06);width: 95%;margin: 0 18px;line-height: 30px;font-size: 20px;/* margin-right: 20px; *//* border-radius: 0; *//* border: navajowhite; */}
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  font-size: 20px;color: #e67a00;
+
+.loader {
+    display: none;
+    position: fixed;
+    left: 0px;
+    top: 64px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url('../img/giphy.gif') 50% 40% no-repeat rgb(255, 255, 255);
+    background-size: 150px 150px;
 }
-.price{font-weight: bold;}
-.filter_category{font-weight: bold;font-size: 16px;}
-.product_details{
+
+.categories_gallery,
+.collection_link {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.breadcrumb {
+    display: none;
+    margin: 2% 10%;
+    background-color: white;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06);
+}
+
+.viewer_container {
+    display: none;
+}
+
+.item_label {
+    display: none;
+}
+
+.item_title {
+    color: #e67a00;
+}
+
+.filter_text {
+    color: #4f4f79;
+}
+
+.items_search {
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06);
+    width: 95%;
+    margin: 0 18px;
+    line-height: 30px;
+    font-size: 20px;
+    /* margin-right: 20px; */
+    /* border-radius: 0; */
+    /* border: navajowhite; */
+}
+
+::-webkit-input-placeholder {
+    /* Chrome/Opera/Safari */
+    font-size: 20px;
+    color: #e67a00;
+}
+
+.price {
+    font-weight: bold;
+}
+
+.filter_category {
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.product_details {
     position: absolute;
     top: 23%;
     left: 55%;
     width: 32vw;
 }
-.pT15{padding: 15px;}
-.pT14{padding-top: 14px;}
-.gallery-container{margin-top: 30px;}
-.mT6{margin-top: 6%;}
+
+.pT15 {
+    padding: 15px;
+}
+
+.pT14 {
+    padding-top: 14px;
+}
+
+.gallery-container {
+    margin-top: 30px;
+}
+
+.mT6 {
+    margin-top: 2%;
+}
+
 #forgeViewer {
     height: 66% !important;
     width: 44vw !important;
@@ -58,33 +127,79 @@ body {
     left: 9%;
     /* right: 0; */
 }
-.logo_header{font-size: 36px;}
-.product_desc{margin-bottom: 30px;}
-.thumbnail_div{padding: 0}
-.items_list_container{margin: 0 auto;padding: 0;display: none;}
-.filter_type{list-style: none;padding-left: 0;margin-bottom: 30px;/* background-color: white; */}
-.filter_container{border: 0px solid grey;}
-.filter_container{padding: 10px;min-height: 439px;background-color: white;box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06);}
+
+.logo_header {
+    font-size: 36px;
+}
+
+.product_desc {
+    margin-bottom: 30px;
+}
+
+.thumbnail_div {
+    padding: 0
+}
+
+.items_list_container {
+    margin: 0 auto;
+    padding: 0;
+    display: none;
+}
+
+.filter_type {
+    list-style: none;
+    padding-left: 0;
+    margin-bottom: 30px;
+    /* background-color: white; */
+}
+
+.filter_container {
+    border: 0px solid grey;
+}
+
+.filter_container {
+    padding: 10px;
+    min-height: 439px;
+    background-color: white;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06);
+}
+
+.login_prompt {
+    background-image: url(/img/autodesk-logo-large.png);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin: auto;
+    height: 400px;
+    font-size: 36px;
+    font-weight: bold;
+    text-align: center;
+    line-height: 400px;
+}
+
+.login_prompt a {
+    color: #1059CE
+}
+
+.navbar-default {}
 
 
 /* Large screens ----------- */
-@media only screen 
-and (min-width : 1824px) {
 
-#forgeViewer {
-    height: 47% !important;
-    width: 40vw !important;
-    display: block;
-    position: absolute;
-    bottom: 0;
-    top: 25%;
-    left: 9%;
-    right: 0;
-    
-}
+@media only screen and (min-width: 1824px) {
+    #forgeViewer {
+        height: 47% !important;
+        width: 40vw !important;
+        display: block;
+        position: absolute;
+        bottom: 0;
+        top: 25%;
+        left: 9%;
+        right: 0;
+    }
 }
 
 .tz-gallery .thumbnail {
     min-height: 457.93px;
     padding: auto 0;
-    }
+}
